@@ -626,6 +626,8 @@ typedef enum user_options_defaults
   AUTODETECT               = false,
   BACKEND_DEVICES_VIRTUAL  = 1,
   BENCHMARK_ALL            = false,
+  BENCHMARK_MAX            = 99999,
+  BENCHMARK_MIN            = 0,
   BENCHMARK                = false,
   BITMAP_MAX               = 18,
   BITMAP_MIN               = 16,
@@ -736,6 +738,8 @@ typedef enum user_options_map
   IDX_BACKEND_INFO              = 'I',
   IDX_BACKEND_VECTOR_WIDTH      = 0xff05,
   IDX_BENCHMARK_ALL             = 0xff06,
+  IDX_BENCHMARK_MAX             = 0xff56,
+  IDX_BENCHMARK_MIN             = 0xff57,
   IDX_BENCHMARK                 = 'b',
   IDX_BITMAP_MAX                = 0xff07,
   IDX_BITMAP_MIN                = 0xff08,
@@ -2418,6 +2422,8 @@ typedef struct user_options
   u32          attack_mode;
   u32          backend_devices_virtual;
   u32          backend_info;
+  u32          benchmark_max;
+  u32          benchmark_min;
   u32          bitmap_max;
   u32          bitmap_min;
   #ifdef WITH_BRAIN
